não deletar agendamento com status de enviado e melhorando  exceptions